# QtCode

./: .gitignore  HNamespace.h  QtCode_en.qph  README.md  default_copy.xml  treeitem.h  treemodel.h
Config/: custom-style.css  default_copy.xml
HeAlgorithm/: HAiry.cpp  HAiry.h  HAlgorithmGlobal.h  HBSplines.cpp  HBSplines.h  HBesselCylindrical.cpp  HBesselCylindrical.h  HBesselSpherical.cpp  HBesselSpherical.h  HChromaticity.cpp  HChromaticity.h  HChromaticity2.cpp  HChromaticity2.h  HChromaticity2_p.h  HChromaticityV2.cpp  HChromaticityV2.h  HChromaticityV2_p.h  HChromaticity_p.h  HCie.cpp  HCie.h  HComplexNumber.cpp  HComplexNumber.h  HDigitalFilter.cpp  HDigitalFilter.h  HFit.cpp  HFit.h  HGslHelper.cpp  HGslHelper.h  HIesTm30.cpp  HIesTm30.h  HInterp.cpp  HInterp.h  HInterp2D.cpp  HInterp2D.h  HLinearFit.cpp  HLinearFit.h  HLinearFitting.cpp  HLinearFitting.h  HMath.cpp  HMath.h  (+42 more)
HeCommunicate/: -HProtocolSl.cpp  -HProtocolSl.h  HAbstractCodec.cpp  HAbstractCodec.h  HAbstractCodec_p.h  HAbstractDevice.cpp  HAbstractDevice.h  HAbstractDevice_p.h  HAbstractPort.cpp  HAbstractPort.h  HAbstractPort_p.h  HAbstractProtocol.cpp  HAbstractProtocol.h  HAbstractProtocolStrategy.cpp  HAbstractProtocolStrategy.h  HAbstractProtocolStrategy_p.h  HAbstractProtocol_p.h  HAbstractSimulateDevice.cpp  HAbstractSimulateDevice.h  HAbstractSimulateDevice_p.h  HAbstractUCharConvert.cpp  HAbstractUCharConvert.h  HAbstractUCharConvert_p.h  HBigProtocol.cpp  HBigProtocol.h  HBigProtocol_p.h  HBigUCharConvert.cpp  HBigUCharConvert.h  HBigUCharConvert_p.h  HCcd1305Protocol.cpp  HCcd1305Protocol.h  HCcd1305Protocol_COM.cpp  HCcd1305Protocol_COM.h  HCcd1305Protocol_COM_p.h  HCcd1305Protocol_p.h  HCcd554bProtocol.cpp  HCcd554bProtocol.h  HCcd554bProtocol_p.h  HCodecSL.cpp  HCodecSL.h  (+109 more)
HeController/: HAbstractActionStrategy.cpp  HAbstractActionStrategy.h  HAbstractActionStrategy_p.h  HAbstractModel.cpp  HAbstractModel.h  HAbstractModel_p.h  HAbstractThread.cpp  HAbstractThread.h  HAbstractThread_p.h  HControllerFactory.cpp  HControllerFactory.h  HControllerFactory_p.h  HControllerGlobal.h  HControllerHelper.cpp  HControllerHelper.h  HDelayThread.cpp  HDelayThread.h  HDelayThread_p.h  HElecStrategy.cpp  HElecStrategy.h  HElecStrategy_p.h  HIntegrateModel.cpp  HIntegrateModel.h  HIntegrateModel_p.h  HIntegrateThread.cpp  HIntegrateThread.h  HIntegrateThread_p.h  HLuminousStrategy.cpp  HLuminousStrategy.h  HLuminousStrategy_p.h  HMemento.cpp  HMemento.h  HMementoCollection.cpp  HMementoCollection.h  HMementoCollection_p.h  HMemento_p.h  HMotorStrategy.cpp  HMotorStrategy.h  HMotorStrategy_p.h  HPowerFactorStrategy.cpp  (+51 more)
HeCore/: HAbstractLogFile.cpp  HAbstractLogFile.h  HAbstractService.cpp  HAbstractService.h  HAbstractService_p.h  HActionType.h  HAppContext.cpp  HAppContext.h  HAppContext_p.h  HCallback.h  HCallorHelper.cpp  HCallorHelper.h  HClassCallback.h  HCollection.h  HCore.cpp  HCore.h  HCoreGlobal.h  HCoreGlobalInstance.cpp  HCoreGlobalInstance.h  HCoreGlobalInstance_p.h  HCoreHelper.cpp  HCoreHelper.h  HDataCollection.h  HDataConvert.cpp  HDataConvert.h  HDataFormatInfo.cpp  HDataFormatInfo.h  HDataFormatInfo_p.h  HDataObject.cpp  HDataObject.h  HDataObject_p.h  HDefine.h  HDictionary.cpp  HDictionary.h  HDumpTree.cpp  HDumpTree.h  HDumpTree_p.h  HErrorType.h  HException.cpp  HException.h  (+59 more)
HeData/: HAbstractCalibrateItem.cpp  HAbstractCalibrateItem.h  HAbstractCalibrateItem_p.h  HAbstractDataItem.cpp  HAbstractDataItem.h  HAbstractDataItem_p.h  HAbstractFileStream.cpp  HAbstractFileStream.h  HAbstractFileStream_p.h  HAbstractGrade.cpp  HAbstractGrade.h  HAbstractGradeItem.cpp  HAbstractGradeItem.h  HAbstractGradeItem_p.h  HAbstractGrade_p.h  (+251 more)
SlSpectrometer/: CCyUSB.cpp  CCyUSB.h  CMakeLists.txt  HCie.cpp  HCie.h  HConfig.h  HConfig.h.in  HData.h  HData_CIE1931.cpp  HData_CIE1964.cpp  HData_CIE_DAY.cpp  HData_CIE_IES.cpp  HData_CIE_TC_32.cpp  HData_CIE_UCS.cpp  HData_CIE_UCS_P.cpp  HData_PhotopicVision.cpp  HIesTm30.cpp  HIesTm30.h  HSpectrometer.cpp  HSpectrometer.h  HSpectrometerAlgorithm.cpp  HSpectrometerAlgorithm.h  HSpectrometerCalibrate.cpp  HSpectrometerCalibrate.h  HSpectrometerData.h  HSpectrometerGlobal.h  HSpectrometerHelper.cpp  HSpectrometerHelper.h  HSpectrometerProtocol.cpp  HSpectrometerProtocol.h  HSpectrometerTest.cpp  HSpectrometerTest.h  HUsbPortCy.cpp  HUsbPortCy.h  SongLang.cpp  SongLang.h
SlSpectrometer/include/: cyioctl.h
SlSpectrometerDemo/: CMakeLists.txt  HMainWindowDemo.cpp  HMainWindowDemo.h  HMainWindowDemo.ui  HMainWindowDemo_p.h  HThreadDemo.cpp  HThreadDemo.h  HThreadDemo_p.h  main.cpp
(+2755 files in other folders)
